export sun.nio.ch for JDK 16 build