@@ -23,3 +23,9 @@ micronautBuild {
 		force "org.neo4j.test:neo4j-harness:$neo4jVersion"
 	}
 }
+
+test {
+    if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
+        jvmArgs '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED'
+    }
+}
